--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,14 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^6.7.0",
+        "helmet": "^7.0.0",
+        "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.0",
         "mongodb": "^5.5.0",
-        "mongoose": "^7.1.1"
+        "mongoose": "^7.1.1",
+        "xss-clean": "^0.1.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
