--- a/frontend/PopCafe/react-files/package.json
+++ b/frontend/PopCafe/react-files/package.json
@@ -13,6 +13,7 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@remix-run/router": "^1.6.2",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.0.3",
     "next": "^13.4.4",
     "react": "18.2.0",
     "react-countup": "^6.4.0",
